--- a/app/views/laboratory/show.html.erb
+++ b/app/views/laboratory/show.html.erb
@@ -57,8 +57,8 @@
 
           <div class="container-label" style="text-align: center">
             <div class="label_status" style="background-color: green"></div> Ligado
-            <div class="label_status" style="background-color: red"></div> Desligado
-            <div class="label_status" style="background-color: gray"></div> Em manutenção
+            <div class="label_status" style="background-color: gray"></div> Desligado
+            <div class="label_status" style="background-color: red"></div> Em manutenção
           </div>
           <div style="text-align: center">
             <button id="report-btn" class="btn btn-default">
