--- a/app/views/report/show.html.erb
+++ b/app/views/report/show.html.erb
@@ -34,6 +34,9 @@
       </div>
       <% i = i + 1 %>
     <% end %>
+    <% if @report.empty? %>
+      <div class="alert alert-success" role="alert"><strong>Nenhum report encontrado!</strong> Esta pensando em fazer um?</div>
+    <% end %>
   </div>
 </div>
 <style>
