--- a/app/views/laboratory/show.html.erb
+++ b/app/views/laboratory/show.html.erb
@@ -4,7 +4,7 @@
 <%= render "report/reportpc" %>
 
 <div id="fullpage">
-  <div class="section active" id="section0" style="background-color: black");>
+  <div class="section active" id="section0");>
     <div class="slide">
       <div class="container-fluid">
 
