--- a/app/views/report/_reportpc.html.erb
+++ b/app/views/report/_reportpc.html.erb
@@ -6,21 +6,21 @@
         <%= form_for(@report, url: report_path) do |f| %>
           <div class="form-group">
             <%= f.label :computer_id, 'Número da Máquina'%><br />
-            <%= f.text_field :computer_id, autofocus: true %>
+            <%= f.text_field :computer_id, autofocus: true, class: "form-control" %>
           </div>
 
           <div style="dipslay:none" class="form-group">
             <%= f.label :laboratory_initials, 'Sigla do Laboratório'%><br />
-            <%= f.text_field :laboratory_initials, :value => @labs.initials, :readonly => true %>
+            <%= f.text_field :laboratory_initials, :value => @labs.initials, :readonly => true , class: "form-control"%>
           </div>
 
           <div class="form-group">
             <%= f.label :description, 'Descrição'%><br />
-            <%= f.text_area :description, autofocus: true %>
+            <%= f.text_area :description, autofocus: true , class: "form-control"%>
           </div>
 
           <div class="actions">
-            <%= f.submit "Registrar Report" %>
+            <%= f.submit "Registrar Report" , class: "btn btn-default"%>
           </div>
         <% end %>
       <% else %>
