--- a/app/views/dashboard/report.html.erb
+++ b/app/views/dashboard/report.html.erb
@@ -78,6 +78,9 @@
 <!-- /page content -->
 
 <style>
+.row .report:hover{
+  background-color: rgba(0,0,0, 0.05);
+}
 .row{
   vertical-align: center;
 }
