--- a/app/views/report/_report_individual.html.erb
+++ b/app/views/report/_report_individual.html.erb
@@ -5,11 +5,11 @@
       <h4>Report feito em <h4> <h4 id="date"></h4>
       <div class="form-group">
         <label>Descrição:</label>
-        <textarea id="description-form" class="form-control" rows="3"></textarea>
+        <textarea id="description-form" class="form-control" rows="3" disabled></textarea>
       </div>
       <div class="form-group">
         <label>Solução:</label>
-        <textarea id="solution-form" class="form-control" rows="3"></textarea>
+        <textarea id="solution-form" class="form-control" rows="3" disabled></textarea>
       </div>
     </div>
   </div>
