--- a/app/views/report/show.html.erb
+++ b/app/views/report/show.html.erb
@@ -40,8 +40,12 @@
   </div>
 </div>
 <style>
+.row:hover{
+  background-color: rgba(0,0,0, 0.05);
+}
 .row{
   vertical-align: center;
+  padding-bottom: 1.5em;
 }
 .row .description{
   word-wrap: break-word;
@@ -53,7 +57,7 @@
   text-align: right;
 }
 .row:not(:first-child){
-  margin-top: 1.5em;
+  padding-top: 1.5em;
 }
 
 .date{
