--- a/app/views/report/_report_individual.html.erb
+++ b/app/views/report/_report_individual.html.erb
@@ -2,15 +2,15 @@
   <div class="container report-form-inside">
     <div class="jumbotron">
       <button id="btn-close" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
-      <h4>Report feito em <h4> <h4 id="date"></h4>
-      <div class="form-group">
-        <label>Descrição:</label>
-        <textarea id="description-form" class="form-control" rows="3" disabled></textarea>
-      </div>
-      <div class="form-group">
-        <label>Solução:</label>
-        <textarea id="solution-form" class="form-control" rows="3" disabled></textarea>
-      </div>
+      <h4>Report feito em:<h4> <h4 id="date"></h4>
+          <div class="form-group">
+            <label>Descrição:</label>
+            <textarea id="description-form" class="form-control" rows="3" disabled></textarea>
+          </div>
+          <div class="form-group">
+            <label>Solução:</label>
+            <textarea id="solution-form" class="form-control" rows="3" disabled></textarea>
+          </div>
     </div>
   </div>
 </div>
@@ -31,7 +31,13 @@ $(document).ready(function() {
     }
 
     date = JSON.stringify(json[$(this).data('id')].created_at);
-    $('#date').text(date);
+    //"2016-11-22T16:52:07.780-02:00"
+    date = date.slice(1,date.length -1);
+    year = date.slice(0,4);
+    month = date.slice(5,7);
+    day = date.slice(8,10);
+    hour = date.slice(11,16);
+    $('#date').text(day+"/"+month+"/"+year+" às "+ hour );
 
 
     $('.report-form').show();
