--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,25 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+  <div class="hidden-xs col-md-3"></div>
+  <div class="jumbotron col-md-6" style="margin-top: 50px">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+    <h2>Esqueceu sua senha?</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= devise_error_messages! %>
+
+      <div class="field">
+        <%= f.label :email, 'E-mail'%><br />
+        <%= f.email_field :email, autofocus: true , class: "form-control"%>
+      </div>
+
+      <br />
+      <div class="actions">
+        <%= f.submit "Enviar instruções para resetar senha"  , class: "form-control"%>
+      </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
   </div>
+  <div class="hidden-xs col-md-3"></div>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
