--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-  <div class="jumbotron" style="margin-top: 50px">
+  <div class="hidden-xs col-md-3"></div>
+  <div class="jumbotron col-md-6" style="margin-top: 50px">
     <h2>Editar Perfil</h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
@@ -43,4 +44,5 @@
     <% end %>
     <%= link_to "Voltar", :back %>
   </div>
+  <div class="hidden-xs col-md-3"></div>
 </div>
