--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-  <div class="jumbotron">
+  <div class="hidden-xs col-md-3"></div>
+  <div class="jumbotron col-xs-12 col-md-6">
     <h2>Novo Registro</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -7,12 +8,12 @@
 
       <div class="field">
         <%= f.label :name, 'Nome'%><br />
-        <%= f.text_field :name, autofocus: true %>
+        <%= f.text_field :name, autofocus: true, class: "form-control"%>
       </div>
 
       <div class="field">
         <%= f.label :email, 'E-mail' %><br />
-        <%= f.email_field :email, autofocus: true %>
+        <%= f.email_field :email, autofocus: true, class: "form-control"%>
       </div>
 
       <div class="field">
@@ -20,19 +21,21 @@
         <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> caracateres no mínimo)</em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "off" %>
+        <%= f.password_field :password, autocomplete: "off" , class: "form-control"%>
       </div>
 
       <div class="field">
         <%= f.label :password_confirmation, 'Confirme a Senha' %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off" , class: "form-control"%>
       </div>
+      <br />
 
       <div class="actions">
-        <%= f.submit "Registrar" %>
+        <%= f.submit "Registrar" , class: "form-control"%>
       </div>
     <% end %>
 
     <%= render "devise/shared/links" %>
   </div>
+  <div class="hidden-xs col-md-3"></div>
 </div>
