Created a button in computer's map to show reports

--- a/app/views/laboratory/show.html.erb
+++ b/app/views/laboratory/show.html.erb
@@ -62,11 +62,15 @@
             </div>
             <div style="text-align: center">
               <button id="report-btn" class="btn btn-default">
+                <i class="glyphicon glyphicon-exclamation-sign"></i>
                 Reportar Máquina
-                <div type="button" class="btn btn-default btn-circle btn-danger">
-                  <i class="glyphicon glyphicon-exclamation-sign"></i>
-                </div>
               </button>
+              <a href="/report/show">
+              <div id="report-btn" class="btn btn-default">
+                <i class="glyphicon glyphicon-th-list"></i>
+                Exibir Reports
+              </div>
+              </a>
             </div>
           </div>
       </div>
