--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,24 +1,80 @@
+<head>
+<style>
+
+.btn { display: inline-block; *display: inline; *zoom: 1; padding: 4px 10px 4px; margin-bottom: 0; font-size: 13px; line-height: 18px; color: #333333; text-align: center;text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); vertical-align: middle; background-color: #f5f5f5; background-image: -moz-linear-gradient(top, #000000, #e6e6e6); background-image: -ms-linear-gradient(top, #000000, #e6e6e6); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#000000), to(#e6e6e6)); background-image: -webkit-linear-gradient(top, #000000, #e6e6e6); background-image: -o-linear-gradient(top, #000000, #e6e6e6); background-image: linear-gradient(top, #000000, #e6e6e6); background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#000000, endColorstr=#e6e6e6, GradientType=0); border-color: #e6e6e6 #e6e6e6 #e6e6e6; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); border: 1px solid #e6e6e6; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); cursor: pointer; *margin-left: .3em; }
+.btn:hover, .btn:active, .btn.active, .btn.disabled, .btn[disabled] { background-color: #e6e6e6; }
+.btn-large { padding: 9px 14px; font-size: 15px; line-height: normal; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
+.btn:hover { color: #333333; text-decoration: none; background-color: #e6e6e6; background-position: 0 -15px; -webkit-transition: background-position 0.1s linear; -moz-transition: background-position 0.1s linear; -ms-transition: background-position 0.1s linear; -o-transition: background-position 0.1s linear; transition: background-position 0.1s linear; }
+.btn-primary, .btn-primary:hover { text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); color: #ffffff; }
+.btn-primary.active { color: rgba(255, 255, 255, 0.75); }
+.btn-primary { background-color: #000000; background-image: -moz-linear-gradient(top, #444141, #000000); background-image: -ms-linear-gradient(top, #444141, #000000); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#444141), to(#000000)); background-image: -webkit-linear-gradient(top, #444141, #000000); background-image: -o-linear-gradient(top, #444141, #000000); background-image: linear-gradient(top, #444141, #000000); background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#444141, endColorstr=#000000, GradientType=0);  border: 1px solid #383838; text-shadow: 1px 1px 1px rgba(0,0,0,0.4); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5); }
+.btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { filter: none; background-color: #000000; }
+.btn-block { width: 100%; display:block; }
+
+* { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }
+
+html { width: 100%; height:100%; }
+
+body { 
+  width: 100%;
+  height:100%;
+  font-family: 'Helvetica';
+}
+
+.jumbotron { 
+  margin-top: 100px;
+  border-radius: 15px;
+}
+
+h2 { color: #000; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
+
+.frmt { 
+  width: 100%; 
+  margin-bottom: 10px; 
+  background: rgba(0,0,0,0.05);
+  border: none;
+  outline: none;
+  padding: 10px;
+  font-size: 13px;
+  color: black;
+  text-shadow: 1px 1px 1px rgba(255,255,255,1);
+  border: 1px solid rgba(0,0,0,0.3);
+  border-radius: 4px;
+  box-shadow: inset 0 -5px 45px rgba(0,0,0,0.2), 0 1px 1px rgba(255,255,255,0.2);
+  -webkit-transition: box-shadow .5s ease;
+  -moz-transition: box-shadow .5s ease;
+  -o-transition: box-shadow .5s ease;
+  -ms-transition: box-shadow .5s ease;
+  transition: box-shadow .5s ease;
+}
+
+.frmt:focus { box-shadow: inset 0 -5px 45px rgba(0,0,0,0.4), 0 1px 1px rgba(255,255,255,0.2); }
+
+</style>
+</head>
+
 <div class="container">
   <div class="hidden-xs col-md-3"></div>
-  <div class="jumbotron col-md-6" style="margin-top: 50px">
+  <div class="jumbotron col-md-6" style="margin-top: 100px">
 
     <h2>Esqueceu sua senha?</h2>
+    <br />
 
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="field">
-        <%= f.label :email, 'E-mail'%><br />
-        <%= f.email_field :email, autofocus: true , class: "form-control"%>
+      <div class="fieldEmail">
+        <em><small>Enviaremos as instruções de redefinição de senha para a sua conta de email</small></em>
+        <%= f.email_field :email, autofocus: true , placeholder: "Email", required:"required", class:"frmt"%>
       </div>
 
       <br />
       <div class="actions">
-        <%= f.submit "Enviar instruções para resetar senha"  , class: "form-control"%>
+        <%= f.submit "Enviar instruções"  , class:"btn btn-primary btn-block btn-large"%>
+        <%= link_to "Voltar", :back, class:"btn btn-primary btn-block btn-large" %>
       </div>
     <% end %>
 
-    <%= render "devise/shared/links" %>
   </div>
   <div class="hidden-xs col-md-3"></div>
 </div>
