--- a/app/assets/stylesheets/laboratory.css.scss
+++ b/app/assets/stylesheets/laboratory.css.scss
@@ -6,6 +6,11 @@
 /*colors*/
 /*display scheduele*/
 body {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
