--- a/app/views/dashboard/access.html.erb
+++ b/app/views/dashboard/access.html.erb
@@ -14,11 +14,14 @@
   <div class="">
     <div class="row">
       <% if not @laboratory.function.include? "e"%>
+        <% hidden = "hidden-xs hidden-md hidden-xl" %>
         <div class="alert alert-danger alert-dismissible fade in" role="alert">
           <strong>Que loucura!</strong> Acreditamos que este laboratório não possui essa opção disponível.
         </div>
+      <% else %>
+        <% hidden = "" %>
       <% end %>
-      <div class="col-md-12 col-sm-12 col-xs-12">
+      <div class="col-md-12 col-sm-12 col-xs-12 <%= hidden %>">
         <div class="x_panel">
           <div class="x_title">
             <h2>Acesso Autorizado</h2>
@@ -77,10 +80,56 @@
           </div>
         </div>
       </div>
+      <!-- access's history -->
+      <div class="col-md-12 col-sm-12 col-xs-12 <%= hidden %>">
+        <div class="x_panel">
+          <div class="x_title">
+            <h2>Histórico de Acesso</h2>
+
+            <ul class="nav navbar-right panel_toolbox">
+              <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">Settings 1</a>
+                  </li>
+                  <li><a href="#">Settings 2</a>
+                  </li>
+                </ul>
+              </li>
+              <li><a class="close-link"><i class="fa fa-close"></i></a>
+              </li>
+            </ul>
+            <div class="clearfix"></div>
+          </div>
+
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <div class="col-xs-7 col-sm-6"><strong>Nome</strong></div>
+            <div class="col-xs-5 col-sm-6"><strong>Data de Entrada</strong></div>
+          </div>
+
+          <div class="clearfix"></div>
+
+          <% @access_people.each do |a| %>
+            <div class="row-info col-xs-12 col-sm-12 col-md-12">
+              <div class="col-xs-7 col-sm-6"><%= a.user.name %></div>
+              <div class="col-xs-5 col-sm-6"><%= a.created_at.strftime("%d/%m/%Y às %H:%M:%S") %></div>
+            </div>
+          <% end %>
+
+          <div class="x_content">
+            <br />
+          </div>
+
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
 <!-- /page content -->
+
 <script>
 $(document).ready(function() {
   $('#grant-access-btn').click(function() {
@@ -92,7 +141,7 @@ $(document).ready(function() {
   });
   $('#report_danger').click(function() {
     $('#access-authorized').hide();
-    });
+  });
 
 
 });
